--- a/task-1/web-api/package.json
+++ b/task-1/web-api/package.json
@@ -45,6 +45,7 @@
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
+    "socket.io": "^2.3.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -76,6 +77,7 @@
     "@types/request": "^2.48.3",
     "@types/request-promise": "^4.1.44",
     "@types/shelljs": "^0.8.5",
+    "@types/socket.io": "^2.1.8",
     "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
