--- a/task-1/web-api/package.json
+++ b/task-1/web-api/package.json
@@ -62,10 +62,11 @@
     "@types/express": "^4.17.1",
     "@types/express-flash": "0.0.1",
     "@types/express-session": "^1.15.14",
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^24.9.1",
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.141",
     "@types/lusca": "^1.6.1",
+    "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.5.18",
     "@types/node": "^12.7.8",
     "@types/node-sass": "^4.11.0",
